Version 1.14.0
---------------------------------
Add new completion status: On-Hold

Minor performance improvements.

Fix a bug where new tag text input was not always cleared.

Fix a bug where Edit Notes was using a wrong ImGui flag.

Version: 1.13.0 (2023-11-01)
---------------------------------
Add tags
You can now assign an arbitrary number of tags to each entry in the database.
The entries can be filtered by tags

Version: 1.12.0 (2023-10-28)
---------------------------------
Add filtering
Entries can now be filtered based on most of their attributes.
The previous Entry name fuzzy filtering has been renamed to `search` as it better describes the function.

Add MS Windows support

Add option to clear the list of recently opened files

Excella window is now maximized by default

Improve database loading / creation behavior
On boot excella will behave as the following:
The config file is loaded. If it does not exist, the CWD is used to create `excella.db`. If this fails, the application exits.
If the config file does exist, and default db path is specified, excella will attempt to create it. On success, the db is used, on fail, the application will exit.

Disable statistics page.
This feature will either be completely re-written or entirely removed in a future version.

Add new type `u64`
Replace all instances of size_t with u64. On an amd64 machine, they are both 8 unsigned bytes, so this currently makes no functional difference.

Fix creating new entry while search / filter active would not focus the new entry correctly